--- a/audio.html
+++ b/audio.html
@@ -3,24 +3,62 @@
     <head>
         <title>Audio fun</title>
         <style type="text/css">
-            #canvas {
+            #equalizer
+            {
                 margin: 10px;
 
                 width: 100%;
                 height: 200px;
             }
+
+            .settings
+            {
+                margin-top: 10px;
+            }
+
+            #url, #fs
+            {
+                display: inline-block;
+            }
+
+            #url,
+            #url > input
+            {
+                width: 300px;
+            }
+
+            .hidden
+            {
+                display: none !important;
+            }
         </style>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
-        <script>
-            window.addEventListener('load', function() {
-                new AudioEqualizer(new Equalizer, 'sounds/sound.wav').loadNStart();
-            });
-        </script>
+        <div class="settings">
+            <div>
+                Use sound from:
+                <select id="way">
+                    <option value="sample">sample</option>
+                    <option value="url">url</option>
+                    <option value="fs">file system</option>
+                </select>
+                <div id="url" class="hidden">
+                    <input type="url" placeholder="type url here..." />
+                </div>
+                <div id="fs" class="hidden">
+                    <input type="file" accept="audio/*" />
+                </div>
+            </div>
+            <div>
+                <button id="play">Play</button>
+            </div>
+        </div>
+
+        <canvas id="equalizer"></canvas>
         <script src="node_modules/vow/vow.min.js"></script>
         <script src="js/equalizer.js"></script>
         <script src="js/bufferLoader.js"></script>
         <script src="js/audio.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
