--- a/audio.html
+++ b/audio.html
@@ -11,11 +11,6 @@
                 height: 200px;
             }
 
-            .settings
-            {
-                margin-top: 10px;
-            }
-
             #url, #fs
             {
                 display: inline-block;
@@ -25,6 +20,11 @@
             #url > input
             {
                 width: 300px;
+            }
+
+            .settings
+            {
+                margin-top: 10px;
             }
 
             .hidden
@@ -58,7 +58,7 @@
         <script src="node_modules/vow/vow.min.js"></script>
         <script src="js/equalizer.js"></script>
         <script src="js/bufferLoader.js"></script>
-        <script src="js/audio.js"></script>
+        <script src="js/AudioEqualizer.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
